trunk/Archive2/76/4bf3faec39b8bd/output
main.cpp:9:14: error: ISO C++11 does not allow conversion from string literal to 'char *' [-Werror,-Wwritable-strings]
    char *c ="(";
             ^
main.cpp:10:16: error: ISO C++11 does not allow conversion from string literal to 'char *' [-Werror,-Wwritable-strings]
    char *c_1 =",";
               ^
main.cpp:11:16: error: ISO C++11 does not allow conversion from string literal to 'char *' [-Werror,-Wwritable-strings]
    char *c_2 =")";
               ^
main.cpp:20:14: error: reference to non-static member function must be called; did you mean to call it with no arguments?
    if(!file.eof)
        ~~~~~^~~
                ()
main.cpp:25:16: warning: expression result unused [-Wunused-value]
           for(index2;index2 < C; index2++){
               ^~~~~~
main.cpp:24:12: warning: expression result unused [-Wunused-value]
       for(index ; index  < N; index ++){
           ^~~~~
2 warnings and 4 errors generated.
